--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -14,10 +14,10 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
       
-    - name: Set up JDK 11
+    - name: Set up JDK 17  # Update to Java 17
       uses: actions/setup-java@v3
       with:
-        java-version: '11'
+        java-version: '17'  # Change to 17
         distribution: 'adopt'
         
     - name: Cache Maven dependencies
