--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,10 +13,10 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     
-    - name: Set up JDK 11
+    - name: Set up JDK 17  # Update to Java 17
       uses: actions/setup-java@v2
       with:
-        java-version: '11'
+        java-version: '17'  # Change to 17
         distribution: 'adopt'
         
     - name: Build and test with Maven
