--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,10 +11,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
-    
+    - uses: actions/checkout@v3  # Update to the latest version
+
     - name: Set up JDK 17  # Update to Java 17
-      uses: actions/setup-java@v2
+      uses: actions/setup-java@v3  # Update to the latest version
       with:
         java-version: '17'  # Change to 17
         distribution: 'adopt'
@@ -23,7 +23,7 @@ jobs:
       run: mvn clean verify org.jacoco:jacoco-maven-plugin:report
       
     - name: Publish Test Report
-      uses: actions/upload-artifact@v2
+      uses: actions/upload-artifact@v3  # Update to the latest version
       if: success() || failure()
       with:
         name: test-report
