--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -14,10 +14,10 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
       
-    - name: Set up JDK 17  # Update to Java 17
+    - name: Set up JDK 17
       uses: actions/setup-java@v3
       with:
-        java-version: '17'  # Change to 17
+        java-version: '17'
         distribution: 'adopt'
         
     - name: Cache Maven dependencies
@@ -31,23 +31,12 @@ jobs:
     - name: Build with Maven
       run: mvn clean install
       
+    - name: Generate Markdown Documentation
+      run: ./generate_docs.sh  # Run the script to generate Markdown files
+      
     - name: Generate JavaDoc
       run: mvn javadoc:javadoc
       
-    - name: Generate Sidebar
-      run: |
-        echo "# Sidebar" > sidebar.md
-        for dir in src/main/java/*; do
-          if [ -d "$dir" ]; then
-            echo "## $(basename "$dir")" >> sidebar.md
-            for file in "$dir"/*.java; do
-              if [ -f "$file" ]; then
-                echo "- [$(basename "$file" .java)](${file#src/main/java/})" >> sidebar.md
-              fi
-            done
-          fi
-        done
-        
     - name: Deploy to GitHub Pages
       uses: peaceiris/actions-gh-pages@v3
       with:
