--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -12,16 +12,16 @@ jobs:
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v3  # Update to v3
-
+      uses: actions/checkout@v2
+      
     - name: Set up JDK 17
-      uses: actions/setup-java@v3  # Keep v3 as it's already latest
+      uses: actions/setup-java@v2
       with:
         java-version: '17'
         distribution: 'adopt'
         
     - name: Cache Maven dependencies
-      uses: actions/cache@v3  # Keep v3 as it's already latest
+      uses: actions/cache@v2
       with:
         path: ~/.m2/repository
         key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
@@ -33,14 +33,17 @@ jobs:
       
     - name: Generate Markdown Documentation
       run: |
-        chmod +x ./generate_docs.sh  # Make the script executable
-        ./generate_docs.sh            # Run the script to generate Markdown files
+        chmod +x ./generate_docs.sh
+        ./generate_docs.sh
+
+    - name: List files in publish directory
+      run: ls -R ./target/site/apidocs  # Ensure documentation files exist
       
     - name: Generate JavaDoc
       run: mvn javadoc:javadoc
       
     - name: Deploy to GitHub Pages
-      uses: peaceiris/actions-gh-pages@v4  # Update to v4
+      uses: peaceiris/actions-gh-pages@v3
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_dir: ./target/site/apidocs
