--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -31,14 +31,18 @@ jobs:
     - name: Build with Maven
       run: mvn clean install
       
+    - name: Install MkDocs
+      run: |
+        python -m pip install --upgrade pip
+        pip install mkdocs mkdocs-material  # Install MkDocs and the Material theme
+
     - name: Generate Documentation
       run: |
-        chmod +x ./generate_docs.sh
-        ./generate_docs.sh
+        mkdocs build  # This will create the site in docs/site
 
     - name: Deploy to GitHub Pages
       uses: peaceiris/actions-gh-pages@v3
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./docs  # Publish from the root of the docs directory
-        keep_files: true
+        publish_dir: ./docs/site  # Publish from the generated site directory
+        keep_files: false  # Clean up previous files
