--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -30,7 +30,16 @@ jobs:
           
     - name: Build with Maven
       run: mvn clean install
-      
+
+    - name: Create mkdocs.yml
+      run: |
+        echo "site_name: Webslate - Java Basics" > docs/mkdocs.yml
+        echo "theme:" >> docs/mkdocs.yml
+        echo "  name: material" >> docs/mkdocs.yml
+        echo "" >> docs/mkdocs.yml
+        echo "nav:" >> docs/mkdocs.yml
+        echo "  - Home: index.md" >> docs/mkdocs.yml
+
     - name: Install MkDocs
       run: |
         python -m pip install --upgrade pip
