data_types: add fixed array examples with byte and int 1. updated move zeroes problem 2. update script and docs workflow

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -32,7 +32,7 @@ jobs:
     - name: Install MkDocs
       run: |
         python3 -m pip install --upgrade pip
-        pip install mkdocs mkdocs-material mkdocs-gen-nav-plugin mkdocs-awesome-pages-plugin
+        pip install mkdocs mkdocs-material mkdocs-gen-nav-plugin mkdocs-awesome-pages-plugin pymdown-extensions
 
     - name: Generate Documentation
       run: |
